--- a/hw2.Rmd
+++ b/hw2.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "HW2"
-author: "Your Name (ID)"
+author: "Hwang, Yeong-Ling (H24076126)"
 output: html_document
 ---
 
@@ -14,11 +14,12 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r}
 str(iris)
 #summary()
+summary(iris)
 ```
 
 # Problem 2:
 
-The sample median of the variable Petail.With is  
+The sample median of the variable Petail.Width is 1.300
 
 # Problem 3: Draw a histograms of the Sepal.Length variable
 
