--- a/hw2.Rmd
+++ b/hw2.Rmd
@@ -24,7 +24,7 @@ The sample median of the variable Petail.Width is 1.300
 # Problem 3: Draw a histograms of the Sepal.Length variable
 
 ```{r}
-hist()
+hist(iris$Sepal.Length)
 ```
 
 # Problem 4: Draw a scatter plot 
